// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c0 {
  border: none;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a footer prop is set 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 1rem;
  width: 100%;
}

.c0 {
  border: none;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
      <div
        class="c5 c4"
      >
        <div>
          footer
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a hasTint prop is set 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c0 {
  border: none;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a title prop is set 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c8 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c8 + .sub-heading {
  margin-top: -1rem;
}

.c8:last-child {
  margin-bottom: 0;
}

h1.c8 {
  font-size: 3rem;
}

h2.c8 {
  font-size: 2.5rem;
}

h3.c8 {
  font-size: 2rem;
}

h4.c8 {
  font-size: 1.5rem;
}

h5.c8 {
  font-size: 1.25rem;
}

h6.c8 {
  font-size: 1rem;
}

.c8 .c9 {
  top: 0.1em;
}

.c8 {
  font-weight: 600;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1rem;
  position: relative;
  width: 100%;
}

.c7 {
  margin-bottom: 0px;
}

.c0 {
  border: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

@media (max-width:480px) {
  h1.c8 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c8 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c8 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c8 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c8 {
    font-size: 1.2rem;
  }
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c5 c6 c4"
      >
        <h5
          class="c7 sub-heading c8 c4"
          id="Callout-2"
        >
          Title
        </h5>
      </div>
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when a type prop is set 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: #35709e !important;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c9 {
  fill: #35709e;
  position: relative;
  height: 1em;
  width: 1em;
}

.c6 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c6 + .sub-heading {
  margin-top: -1rem;
}

.c6:last-child {
  margin-bottom: 0;
}

h1.c6 {
  font-size: 3rem;
}

h2.c6 {
  font-size: 2.5rem;
}

h3.c6 {
  font-size: 2rem;
}

h4.c6 {
  font-size: 1.5rem;
}

h5.c6 {
  font-size: 1.25rem;
}

h6.c6 {
  font-size: 1rem;
}

.c6 .c8 {
  top: 0.1em;
}

.c6 {
  font-weight: 600;
}

.c5 {
  margin-bottom: 0px;
}

.c0 {
  border: none;
}

.c7 {
  margin-right: 1rem;
}

@media (max-width:480px) {
  h1.c6 {
    font-size: 2rem;
  }
}

@media (max-width:480px) {
  h2.c6 {
    font-size: 1.8rem;
  }
}

@media (max-width:480px) {
  h3.c6 {
    font-size: 1.6rem;
  }
}

@media (max-width:480px) {
  h4.c6 {
    font-size: 1.4rem;
  }
}

@media (max-width:480px) {
  h5.c6 {
    font-size: 1.2rem;
  }
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
  type="info"
>
  <div
    class="c3 c4"
  >
    <h5
      class="c5 sub-heading c6 c4"
    >
      <svg
        class="c7 c8 c9 c10"
        color="info"
        role="img"
        size="1"
        style="size: 1px;"
        viewBox="0 0 16 16"
      >
        <path
          d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zM7 3h2v2H7V3zm3 10H6v-1h1V7H6V6h3v6h1v1z"
          fill-rule="even-odd"
        />
      </svg>
    </h5>
    <div
      class="c4"
    >
      <div
        class="c4"
        id="Callout-1"
      >
        Callout
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with a custom element 1`] = `
.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c0 {
  border: none;
}

<div
  aria-describedby="Callout-1"
  aria-labelledby="Callout-2"
  class="c0 c1 c2"
>
  <div
    class="c3 c4"
  >
    <div
      class="c4"
    >
      <div
        class="c4"
        id="Callout-1"
      >
        <label>
          Callout
        </label>
      </div>
    </div>
  </div>
</div>
`;
